style: fix dark mode
KNOWN ISSUES:
    post markdown doesn't support light mode.

--- a/src/components/PostContent.css
+++ b/src/components/PostContent.css
@@ -1,3 +1,7 @@
 ul, ol {
     list-style-type: disc;
 }
+
+.markdown-body {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
